# gf-scribe

./: README.md  country.scribe  gf-scribe.hs  scribe.cabal
Scribe/: AbsSyn.hs  Interpreter.hs  Interval.hs  Lexer.x  Parser.y  Prelude.hs  SenseSchema.hs
