name: gf
version: 0.0.1

cabal-version: 1.22
build-type: Simple
license: GPL
category: Natural Language Processing, Compiler

executable gf-scribe
  main-is: gf-scribe.hs
  default-language:    Haskell2010
  build-depends: pgf2 >= 4.0.0,
                 base >= 4.6 && <5,
                 array,
                 containers,
                 bytestring,
                 utf8-string,
                 http-slim,
                 json,
                 html,
                 haskeline,
                 daison
  ghc-options: -threaded
  other-modules:
    Scribe.AbsSyn
    Scribe.Lexer
    Scribe.Parser
    Scribe.Interval
    Scribe.SenseSchema
    Scribe.Interpreter
    Scribe.Prelude
